# tremor

./: .gitignore  README.md  pyproject.toml
src/tremor/adapters/: base.py  hackernews.py  reddit.py  twitter.py
src/tremor/application/: clustering.py  content.py  pipeline.py
src/tremor/domain/: models.py  scoring.py
src/tremor/infrastructure/: crawler.py  scheduler.py  store.py
src/tremor/interfaces/: cli.py
